[gd_scene format=3]

[ext_resource type="Texture2D" uid="uid://wl1u5367hbm" path="res://assets/ui/panels/gold_panel.png" id="gold_panel_tex"]
[ext_resource type="Theme" uid="uid://b7oqjbb8a4okx" path="res://assets/ui/button_theme.tres" id="button_theme"]
[ext_resource type="Script" path="res://scenes/panels/resolution_panel.gd" id="resolution_panel_script"]

[node name="ResolutionPanel" type="Control"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("button_theme")
script = ExtResource("resolution_panel_script")

[node name="Overlay" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="ResolutionBg" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -220.0
offset_right = 300.0
offset_bottom = 220.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("gold_panel_tex")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="ResolutionBgInner" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -292.0
offset_top = -212.0
offset_right = 292.0
offset_bottom = 212.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.06, 0.03, 0.12, 0.92)

[node name="StoryBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -280.0
offset_top = -200.0
offset_right = 280.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="ResolutionTitle" type="Label" parent="StoryBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85, 0.7, 0.4, 1)
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1

[node name="ResolutionText" type="RichTextLabel" parent="StoryBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.8, 0.75, 0.9, 1)
theme_override_font_sizes/normal_font_size = 15
bbcode_enabled = true

[node name="NextButton" type="Button" parent="StoryBox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Next Client"
